add swagger security config
